contrast fix

--- a/src/styles/components/_featured-content.scss
+++ b/src/styles/components/_featured-content.scss
@@ -214,7 +214,7 @@
                 box-shadow: 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
 
                 &__title, &__content {
-                    margin-bottom: 1em;
+                    margin-bottom: .75em;
                 }
                 &__role {
                     font-size: 1.3em;
